    conditional turn restrictions now supported, #1683
    added new `curbside` feature, #1697
    moved QueryGraph to new routing.querygraph package
    removed GraphExtension, #1783, renamed TurnCostExtension to TurnCostStorage

0.13
    removed docker compose file
    PathDetails return null instead of -1 for Infinity by default
    replaced AverageSpeedDetails by DecimalDetails
    moved TagParser into new package: com.graphhopper.routing.util.parsers
    removed FlagEncoderFactory.DEFAULT
    removed forestry and motorroad from RoadClass
    SpatialRule.AccessValue replaced by RoadAccess
    removed EncodedValueLookup.hasEncoder, use hasEncodedValue instead
    removed MappedDecimalEncodedValue: should be replaced with FactoredDecimalEncodedValue
    DataFlagEncoder: it is now required to add EncodedValues before. graph.encoded_values: max_speed,road_class,road_environment,road_access
    instead of EncodingManager.ROUNDABOUT use Roundabout.KEY
    changed output format of result=pointlist and moved it into separate endpoint /spt
    removed TraversalMode.EDGE_BASED_1DIR and TraversalMode.EDGE_BASED_2DIR_UTURN, renamed TraversalMode.EDGE_BASED_2DIR to TraversalMode.EDGE_BASED
    to prevent u-turns when using edge-based algorithms it is now required to use TurnWeighting, #1640
    GraphHopperStorage.getGraph(Class) was replaced by GraphHopperStorage.getBase/CHGraph(), #1669
    CHGraph.shortcut(int, int) was removed (use .shortcut(int, int, ...) and/or .shortcutEdgeBased(int, int, ...) instead, #1693
    CH graphs are now identified using CHProfile instead of Weighting, #1670
    removed the 'traversal_mode` request parameter for /route, instead of 'traversal_mode=edge_based_2dir' use edge_based=true
    removed GraphHopper.set/getTraversalMode() methods, #1705
    edge-based CH is now chosen by default if it was prepared, #1706
    it is now possible to specify finite u-turn costs for CH preparation, #1671